--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@ migrate_working_dir/
 *.iml
 *.ipr
 *.iws
-.idea/
+.idea/libraries/
+.idea/*.xml
+android/.idea/*.xml
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
