Installed flutter_flavorizr

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "yaml.schemaStore.enable": false
+  "yaml.schemaStore.enable": false,
+  "cSpell.words": [
+    "codewithandrea",
+    "flavorizr"
+  ]
 }
