--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_ship_app
 description: "Flutter App Release Checklist (companion app for the Flutter in Production course)"
 publish_to: 'none'
-version: 0.1.4
+version: 0.1.7
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
@@ -35,40 +35,8 @@ dev_dependencies:
   riverpod_generator: 2.4.0
   custom_lint: 0.6.4
   riverpod_lint: 2.3.10
-  flutter_flavorizr: 2.2.3
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/
-
-flavorizr:
-  ide: "vscode"
-  app:
-    android:
-      flavorDimensions: "flavor-type"
-
-  flavors:
-    dev:
-      app:
-        name: "Flutter Ship Dev"
-      android:
-        applicationId: "com.codewithandrea.flutter_ship_app.dev"
-      ios:
-        bundleId: "com.codewithandrea.flutterShipApp.dev"
-
-    stg:
-      app:
-        name: "Flutter Ship Stg"
-      android:
-        applicationId: "com.codewithandrea.flutter_ship_app.stg"
-      ios:
-        bundleId: "com.codewithandrea.flutterShipApp.stg"
-
-    prod:
-      app:
-        name: "Flutter Ship"
-      android:
-        applicationId: "com.codewithandrea.flutter_ship_app"
-      ios:
-        bundleId: "com.codewithandrea.flutterShipApp"
+    - assets/common/
