--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   sqlite3: 2.4.3
   # Other packages
   flex_color_scheme: 7.3.1
+  flutter_launcher_icons: 0.13.1
   flutter_riverpod: 2.5.1
   riverpod_annotation: 2.3.5
   shared_preferences: 2.2.3
