--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,3 +41,16 @@ flutter:
   uses-material-design: true
   assets:
     - assets/common/
+
+# Flutter Launcher Icons configuration
+flutter_launcher_icons:
+  ios: true
+  android: true
+  image_path_ios: "assets/common/app-icon.png"
+  image_path_android: "assets/android/app-icon-android.png"
+  adaptive_icon_background: "assets/android/app-icon-background.png"
+  adaptive_icon_foreground: "assets/android/app-icon-foreground.png"
+  remove_alpha_ios: true
+  web:
+    generate: true
+    image_path: "assets/common/app-icon.png"
