--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: 4.0.0
+  flutter_native_splash: 2.4.0
   build_runner: 2.4.11
   riverpod_generator: 2.4.0
   custom_lint: 0.6.4
